# panini

./: .gitignore  README.md  flake.nix  justfile
micrograd/: pyproject.toml
micrograd/notebooks/ipynb/: lec_001.ipynb
micrograd/notebooks/pypct/: lec_001.py
micrograd/src/micrograd/: __init__.py
